feat: secret module
